7066: Extract shared properties between EMR and EKS to generic ones